--- a/Backend/.env
+++ b/Backend/.env
@@ -3,3 +3,5 @@ DB_URL = mongodb://localhost:27017
 EMAIL_USER = 'rajusharmadata123@gmail.com'
 EMAIL_PASS = mppnpggjlhtvgqtj
 JWT_SECRET = Rajusharm@1234@
+RAZORPAY_KEY_ID= rzp_live_RBpruYsl2OGvyg
+RAZORPAY_KEY_SECRET= ejqlWTcMCVw3LB5Tfxd5Hj9k
