--- a/Backend/.env
+++ b/Backend/.env
@@ -5,3 +5,9 @@ EMAIL_PASS = mppnpggjlhtvgqtj
 JWT_SECRET = Rajusharm@1234@
 RAZORPAY_KEY_ID= rzp_live_RBpruYsl2OGvyg
 RAZORPAY_KEY_SECRET= ejqlWTcMCVw3LB5Tfxd5Hj9k
+NODE_ENV = production
+
+
+
+FRONTEND_URL = http://localhost:5173
+PORT = 8080
