add cronjob for the get requeste every 14 minutes to my backend is not suspend

--- a/Backend/.env
+++ b/Backend/.env
@@ -6,7 +6,8 @@ JWT_SECRET = Rajusharm@1234@
 RAZORPAY_KEY_ID= rzp_live_RBpruYsl2OGvyg
 RAZORPAY_KEY_SECRET= ejqlWTcMCVw3LB5Tfxd5Hj9k
 NODE_ENV = production
-
+PING_URL = http://localhost:5173/ping
+PING_TIMEZONE = UTC
 
 
 FRONTEND_URL =http://localhost:5173
