--- a/Backend/.env
+++ b/Backend/.env
@@ -1,12 +1,11 @@
+DB_URL=mongodb+srv://rajusharmadata123:Ef6rj396Rywr9YFH@cluster0.md5d3r6.mongodb.net/Authentication
 
-DB_URL = mongodb://localhost:27017
-EMAIL_USER = 'rajusharmadata123@gmail.com'
 EMAIL_PASS = mppnpggjlhtvgqtj
 JWT_SECRET = Rajusharm@1234@
 RAZORPAY_KEY_ID= rzp_live_RBpruYsl2OGvyg
 RAZORPAY_KEY_SECRET= ejqlWTcMCVw3LB5Tfxd5Hj9k
 NODE_ENV = production
-PING_URL = http://localhost:5173/ping
+PING_URL = http://localhost:8080/ping
 PING_TIMEZONE = UTC
 
 
