--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,5 @@
 DB_URL=mongodb+srv://rajusharmadata123:Ef6rj396Rywr9YFH@cluster0.md5d3r6.mongodb.net/Authentication
-
+EMAIL_USER = "rajusharmadata123@gmail.com"
 EMAIL_PASS = mppnpggjlhtvgqtj
 JWT_SECRET = Rajusharm@1234@
 RAZORPAY_KEY_ID= rzp_live_RBpruYsl2OGvyg
