chnage in cros origin

--- a/Backend/.env
+++ b/Backend/.env
@@ -9,5 +9,5 @@ PING_URL = http://localhost:8080/ping
 PING_TIMEZONE = UTC
 
 
-FRONTEND_URL =http://localhost:5173
+FRONTEND_URL =https://languge-translater.vercel.app
 PORT = 8080
